tests/integration/snapshots/integration__commands__jsonlines__blank_line.snap
---
source: tests/integration/commands/jsonlines.rs
expression: output.snapshot_display()
---
args: ["check", "--json-lines"]
status: 1
success: false
stdin ---
{"a":1}

{"b":2}
stdout ---

stderr ---
error: expected json value, found no significant characters
 --> stdin:2:1
  |
2 |
  | ^
  |
help: insert a placeholder value
  |
2 |  "rust is a must"
  |
